--- a/home/.config/Code - OSS/User/settings.json
+++ b/home/.config/Code - OSS/User/settings.json
@@ -36,7 +36,7 @@
             "decorations": {
                 "applyTo": "main",
                 "backgroundColor": "$editor.hoverHighlightBackground",
-                "isWholeLine": true
+                "isWholeLine": false
             },
             "onEnterMode": [
                 [
