ssh: Update hosts

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -107,15 +107,8 @@ Host i-* mi-*
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
-Host fightingfalcon
-    HostName 49.142.59.217
-    Port 12322
-    User pbzweihander
-    PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_ed25519
-
 Host rossmann
-    HostName 120.50.94.126
+    HostName rossmann.machine.pbzweihander.dev
     Port 22
     User pbzweihander
     PreferredAuthentications publickey
