--- a/home/.config/Code - OSS/User/settings.json
+++ b/home/.config/Code - OSS/User/settings.json
@@ -395,5 +395,6 @@
             }
         }
     },
-    "editor.scrollbar.horizontal": "visible"
+    "editor.scrollbar.horizontal": "visible",
+    "git.confirmSync": false
 }
