--- a/home/.config/Code - OSS/User/settings.json
+++ b/home/.config/Code - OSS/User/settings.json
@@ -396,5 +396,6 @@
         }
     },
     "editor.scrollbar.horizontal": "visible",
-    "git.confirmSync": false
+    "git.confirmSync": false,
+    "git.autofetch": true
 }
