--- a/usr/share/applications/slack-xwayland.desktop
+++ b/usr/share/applications/slack-xwayland.desktop
@@ -3,7 +3,7 @@ Name=Slack (XWayland)
 StartupWMClass=Slack
 Comment=Slack Desktop
 GenericName=Slack Client for Linux
-Exec=/usr/bin/env DISPLAY=:0 MOZ_DBUS_REMOTE=1 /usr/bin/slack -s %U
+Exec=/usr/bin/env MOZ_DBUS_REMOTE=1 /usr/bin/slack -s %U
 Icon=slack
 Type=Application
 StartupNotify=true
