--- a/home/.config/Code - OSS/User/settings.json
+++ b/home/.config/Code - OSS/User/settings.json
@@ -65,7 +65,9 @@
                   "include": "normal"
                 }
               ],
-              ["selections-did-change"]
+              [
+                "selections-did-change"
+              ]
             ]
           }
         ]
