--- a/home/.config/Code - OSS/User/settings.json
+++ b/home/.config/Code - OSS/User/settings.json
@@ -416,5 +416,9 @@
   },
   "[yaml]": {
     "editor.defaultFormatter": "kennylong.kubernetes-yaml-formatter"
+  },
+  "redhat.telemetry.enabled": false,
+  "[helm]": {
+    "editor.tabSize": 2
   }
 }
