--- a/home/.config/Code - OSS/User/settings.json
+++ b/home/.config/Code - OSS/User/settings.json
@@ -458,5 +458,7 @@
   "editor.rulers": [
     70,
     100,
-  ]
+  ],
+  "window.zoomLevel": 1,
+  "pestIdeTools.serverPath": "/usr/bin/pest-language-server"
 }
