--- a/home/.config/alacritty/alacritty.toml
+++ b/home/.config/alacritty/alacritty.toml
@@ -1,4 +1,4 @@
-import = ["~/.config/alacritty/snazzy.toml"]
+import = ["~/.config/alacritty/dimidium.toml"]
 
 [window]
 opacity = 0.95
@@ -7,7 +7,7 @@ resize_increments = true
 
 [font]
 normal = { family = "Victor Mono" }
-size = 13.0
+size = 12.0
 
 [[hints.enabled]]
 command = "xdg-open"
