helix: Update theme

--- a/home/.config/helix/themes/base16.toml
+++ b/home/.config/helix/themes/base16.toml
@@ -1,10 +1,10 @@
 "ui.cursor" = { fg = "light-gray", modifiers = ["reversed"] }
-"ui.cursor.match" = { fg = "yellow", modifiers = ["reversed"] }
+"ui.cursor.match" = { fg = "light-yellow", modifiers = ["reversed"] }
 "ui.linenr.selected" = { modifiers = ["bold"] }
 "ui.statusline.inactive" = { fg = "gray" }
-"ui.statusline.normal" = { fg = "blue", modifiers = ["reversed"] }
-"ui.statusline.insert" = { fg = "green", modifiers = ["reversed"] }
-"ui.statusline.select" = { fg = "magenta", modifiers = ["reversed"] }
+"ui.statusline.normal" = { fg = "light-blue", modifiers = ["reversed"] }
+"ui.statusline.insert" = { fg = "light-green", modifiers = ["reversed"] }
+"ui.statusline.select" = { fg = "light-magenta", modifiers = ["reversed"] }
 "ui.window" = { fg = "gray" }
 "ui.text.focus" = { modifiers = ["reversed"] }
 "ui.virtual.ruler" = { bg = "gray" }
@@ -17,43 +17,43 @@
 "ui.highlight" = { bg = "gray" }
 "ui.cursorline.primary" = { underline = { color = "gray", style = "line" } }
 
-"warning" = "yellow"
-"error" = "red"
-"info" = "blue"
-"hint" = "gray"
+"warning" = "light-yellow"
+"error" = "light-red"
+"info" = "light-blue"
+"hint" = "light-gray"
 
 "diagnostic.hint" = { underline = { color = "gray", style = "curl" } }
-"diagnostic.info" = { underline = { color = "blue", style = "curl" } }
-"diagnostic.warning" = { underline = { color = "yellow", style = "curl" } }
-"diagnostic.error" = { underline = { color ="red", style = "curl" } }
+"diagnostic.info" = { underline = { color = "light-blue", style = "curl" } }
+"diagnostic.warning" = { underline = { color = "light-yellow", style = "curl" } }
+"diagnostic.error" = { underline = { color ="light-red", style = "curl" } }
 
-"attribute" = "yellow"
-"type" = "cyan"
-"constructor" = "blue"
-"constant" = "green"
-"constant.character.escape" = "yellow"
-"string"  = "green"
+"attribute" = "light-yellow"
+"type" = "light-cyan"
+"constructor" = "light-blue"
+"constant" = "light-green"
+"constant.character.escape" = "light-yellow"
+"string"  = "light-green"
 "comment" = { fg = "gray", modifiers = ["italic"] }
 "variable" = "light-gray"
 # "label" = ""
-"punctuation" = "magenta"
-"keyword" = "magenta"
-"keyword.storage" = "yellow"
-"keyword.storage.modifier" = "magenta"
-"operator" = "magenta"
-"function" = "blue"
-"tag" = "red"
+"punctuation" = "light-magenta"
+"keyword" = "light-magenta"
+"keyword.storage" = "light-yellow"
+"keyword.storage.modifier" = "light-magenta"
+"operator" = "light-magenta"
+"function" = "light-blue"
+"tag" = "light-red"
 "namespace" = "light-gray"
 "special" = "light-gray"
-"markup.heading" = "blue"
-"markup.list" = "yellow"
-"markup.bold" = { fg = "red", modifiers = ["bold"] }
-"markup.italic" = { fg = "red", modifiers = ["italic"] }
-"markup.strikethrough" = { fg = "red", modifiers = ["crossed_out"] }
-"markup.link" = "green"
-"markup.link.url" = { fg = "red", underline = { color = "red", style = "line"} }
-"markup.quote" = "cyan"
-"markup.raw" = "magenta"
-"diff.plus" = "green"
-"diff.minus" = "red"
-"diff.delta" = "blue"
+"markup.heading" = "light-blue"
+"markup.list" = "light-yellow"
+"markup.bold" = { fg = "light-red", modifiers = ["bold"] }
+"markup.italic" = { fg = "light-red", modifiers = ["italic"] }
+"markup.strikethrough" = { fg = "light-red", modifiers = ["crossed_out"] }
+"markup.link" = "light-green"
+"markup.link.url" = { fg = "light-red", underline = { color = "red", style = "line"} }
+"markup.quote" = "light-cyan"
+"markup.raw" = "light-magenta"
+"diff.plus" = "light-green"
+"diff.minus" = "light-red"
+"diff.delta" = "light-blue"
